# quik_math

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  quikmaff.hpp
include/: base.hpp  colours.hpp  concepts.hpp  constants.hpp  ease.hpp  functions.hpp  intersect.hpp  ivec2.hpp  mat3.hpp  mat4.hpp  noise.hpp  random.hpp  rect.hpp  types.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/: vec3.cpp  vec4.cpp
